opam-version: "2.0"
name: "dbf"
version: "0.1.1"
maintainer: "Philippe Veber <philippe.veber@gmail.com>"
authors: "Philippe Veber <philippe.veber@gmail.com>"
license: "ISC"
homepage: "https://github.com/pveber/dbf"
bug-reports: "https://github.com/pveber/dbf/issues"
dev-repo: "git+https://github.com/pveber/dbf.git"
depends: [
  "cstruct-unix" {>= "4.0.0"}
  "ppx_cstruct" {>= "4.0.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
synopsis: "DBF format parsing"
description: """
This is a small library meant to parse dBase database files. Many
cases/variants are not handled, but it might already be useful.
"""
